# concurrently-ocaml

./: .dockerignore  .gitignore  .npmignore  CONTEXT.md  Dockerfile  Dockerfile.test  QA_FINDINGS.md  README.md  build-name.sh  conc_ml.sh  concurrently-ml-eio  concurrently-ml-eio-m2  concurrentlyocaml.opam  dune-project  index.d.mts  index.d.ts  index.js  index.mjs  longlong.js  ocaml.sh  package.json
.github/workflows/: build.yml
buildbuild/: linux-concurrently-ml
docs/: engineering-weekly-concurrently-ocaml.html
docs/adr/: 0001-latest-practical-ocaml-and-eio.md  0002-os-neutral-core-and-native-npm-packages.md  0003-terminal-output-compatibility-contract.md
docs/architecture/: feature-parity-plan.md  performance-evidence.md
exec/linux-x86_64/: linux-concurrently-ml
lib/: argument_expander.ml  argument_expander.mli  cli_argv.ml  cli_argv.mli  cli_command_inputs.ml  cli_command_inputs.mli  cli_config.ml  cli_config.mli  cli_env_options.ml  cli_env_options.mli  cli_options.ml  cli_options.mli  cli_short_options.ml  cli_short_options.mli  close_event.ml  close_event.mli  command.ml  command.mli  dune  input_router.ml  input_router.mli  native_api_json.ml  native_api_json.mli  output_buffer.ml  output_buffer.mli  output_color.ml  output_color.mli  output_event.ml  output_event.mli  output_formatter.ml  output_formatter.mli  output_prefix.ml  output_prefix.mli  output_timing.ml  output_timing.mli  posix_process_group.ml  posix_process_group.mli  posix_process_group_stubs.c  posix_runner_backend.ml  posix_runner_backend.mli  (+27 more)
npm/lib/: api.js  native.js  upstream-cli.js
scripts/ci/: audit-npm-api-surface.js  compat-concurrently.js  package-platform.js  perf-concurrently.js  smoke-npm-install-host.js  smoke-npm-install.js  smoke-windows-js-runner.js  smoke-windows-native.js
scripts/dev/: setup-opam-switch.sh
test/: cli_argv_tests.ml  cli_command_inputs_tests.ml  cli_env_options_tests.ml  cli_short_options_tests.ml  domain_tests.ml  dune  output_buffer_tests.ml  output_color_tests.ml  output_prefix_tests.ml  output_timing_tests.ml  posix_runner_backend_tests.ml  process_signal_tests.ml  runner_input_queue_tests.ml  runner_input_reader_tests.ml  runner_output_reader_tests.ml  windows_command_line_tests.ml
